Panda Commerce Website Done

--- a/style.css
+++ b/style.css
@@ -13,10 +13,47 @@
     color:#FF2278;
 }
 .buy-now-button{
-    background-image: linear-gradient(to bottom, #FF2278 0%, #ff136f 100%);
+    background-image: linear-gradient(to bottom, #f74a8c 0%, #ff136f 100%);
     color: #fff;
     border: none;
     border-radius: 8px;
     padding:9px 25px;
     cursor: pointer;
+}
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.cat1{
+    background-image: linear-gradient(45deg, #ff9c35, #ffd019);
+}
+.cat2{
+    background-image: linear-gradient(45deg, #ff589b, #ff136f);
+}
+.cat3{
+    background-image: linear-gradient(45deg, #4289ff, #07f8c3);
+}
+.categories h1{
+    color:white;
+}
+.categories img{
+    width: 100px;
+}
+.card{
+    border: none;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px lightgray;
+}
+.card-footer{
+    background-color: #fff;
+    border-top: none;
+}
+#subscribe{
+    height: 300px;
+}
+#subscribe h6{
+    color:gray;
+}
+footer{
+    text-align: center;
 }
